# Time_Team_Roster_App

./: .gitignore  README.md
backend/: package.json
backend/src/: index.js
backend/src/routes/: auth.js  relay.js  roster.js  swaps.js  timesheet.js
backend/src/services/: crypto.js  firestore.js  opbnb.js  payroll.js
contracts/: TimeLog.sol
docs/: API.md  APPLE_POLICIES.md  THREAT_MODEL.md
frontend/: .env.local.sample  README.md  index.html  package.json  vite.config.js  vite.config.mjs
frontend/public/: main.js  offline.html  unlock.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: CheckInCard.jsx  EnvBanner.jsx  RecentEvents.jsx  RosterTable.jsx  SwapRequestModal.jsx  Toast.jsx  WalletBadge.jsx  Web3ModeToggle.jsx
frontend/src/hooks/: useGeo.js
frontend/src/lib/: api.js  auth.js  auth.jsx  condorEncoder.js  decodeImageWallet.js  geo.js  toastStore.js
frontend/src/pages/: Dashboard.jsx  Login.jsx  Roster.jsx  RosterAdmin.jsx  Signup.jsx  Swaps.jsx  Timesheet.jsx
frontend/src/utils/: generate-year.js  roster-rotation.js
frontend/src/wasm/: wallet_decoder.js  wallet_decoder_bg.wasm
frontend/src/web3/: TimeLog.abi.json  chains.js  localSigner.js  (+2 more)
frontend/wasm/condor_encoder/: Cargo.toml
frontend/wasm/condor_encoder/src/: lib.rs
frontend/wasm/condor_wallet/: Cargo.toml
frontend/wasm/condor_wallet/src/: lib.rs
onchain/: .env.example  hardhat.config.ts  package.json
onchain/scripts/: deploy.ts
smart-contracts/: foundry.toml
smart-contracts/script/: Deploy.s.sol
smart-contracts/src/: TimesheetLogger.sol
(+4 files in other folders)
